--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Glitter Demo</title>
-		<style>
-			html, body {
-				margin: 0;
-				padding: 0;
-				font-family: sans-serif;
-			}
-			#app {
-				display: flex;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="app"></div>
-		<script type="module" src="./index.js"></script>
-	</body>
+  <head>
+    <title>Glitter Demo</title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+      }
+      #app {
+        display: flex;
+      }
+      .button {
+        margin-top: 1px;
+        margin-bottom: 2px;
+      }
+      .button:hover {
+        margin-top: 2px;
+        margin-bottom: 1px;
+        cursor: pointer;
+        background: rgba(127,127,127, .25)
+      }
+      .button-outlined {
+        background: none;
+        border: 1px solid black;
+        border-radius: 2px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
