--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@
       .button {
         margin-top: 1px;
         margin-bottom: 2px;
+        border-radius: 2.5px;
       }
       .button:hover {
-        margin-top: 2px;
-        margin-bottom: 1px;
+        margin-top: 1.67px;
+        margin-bottom: 1.33px;
         cursor: pointer;
-        background: rgba(127,127,127, .25)
+        background: rgba(127,127,127, .33)
       }
-      .button-outlined {
+      .button.text-button {
+        background: none;
+        border: 0;
+      }
+      .button.outlined-button {
         background: none;
         border: 1px solid black;
-        border-radius: 2px;
+      }
+      .button.elevated-button {
+        background: rgba(36, 160, 237, 1.0);
+        border: 1.5px solid rgba(255, 255, 255, 0.2);
+				box-shadow: 0px 1px 1.5px 0.5px rgba(0, 0, 0, 0.2);
       }
     </style>
   </head>
