--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
         padding: 0;
         font-family: sans-serif;
       }
-      #app {
+      #app,
+			.container,
+			.column,
+			.row {
         display: flex;
       }
+			.column {
+				flex-direction: column;
+			}
       .button {
         margin-top: 1px;
         margin-bottom: 2px;
